data/contextbench_phase1/stripped/raw_transcripts/000005_0495ed04.txt
STRIPPED RAW CLAUDE CODE TRAJECTORY
This transcript was rendered from original raw JSONL using the canonical ADP strip manifest.

[RAW line 2 USER]
PRIOR ISSUE METADATA
repo: django/django
instance_id: django__django-16379
base_commit: 1d0fa848e084cad62d0bb6bde3b51e4862558e57
problem_statement:
FileBasedCache has_key is susceptible to race conditions
Description

        (last modified by Marti Raudsepp)

I received the exception from Django's cache framework:
FileNotFoundError: [Errno 2] No such file or directory: '/app/var/cache/d729e4cf4ba88cba5a0f48e0396ec48a.djcache'
[...]
 File "django/core/cache/backends/base.py", line 229, in get_or_set
    self.add(key, default, timeout=timeout, version=version)
 File "django/core/cache/backends/filebased.py", line 26, in add
    if self.has_key(key, version):
 File "django/core/cache/backends/filebased.py", line 94, in has_key
    with open(fname, "rb") as f:
The code is:
    def has_key(self, key, version=None):
        fname = self._key_to_file(key, version)
        if os.path.exists(fname):
            with open(fname, "rb") as f:
                return not self._is_expired(f)
        return False
Between the exists() check and open(), it's possible for the file to be deleted. In fact, the _is_expired() method itself deletes the file if it finds it to be expired. So if many threads race to read an expired cache at once, it's not that unlikely to hit this window.
[RAW line 5 TOOL Bash]
find ./swebench_9_15/testbed -type f -name "*.py" -path "*/cache/backends/filebased.py" 2>/dev/null | head -5
[RAW line 6 TOOL Bash]

[RAW line 37 TOOL Bash]
find testbed -name "filebased.py" -path "*/cache/backends/*"
[RAW line 38 TOOL RESULT toolu_01TPkfweUYtmDCwxKXL49SZm]
testbed/django/core/cache/backends/filebased.py
[RAW line 40 TOOL Read]
{
  "file_path": "./swebench_9_15/testbed/django/core/cache/backends/filebased.py"
}
[RAW line 41 TOOL RESULT toolu_011A79YrTpRroAb23L8UgVPK]
     1→"File-based cache backend"
     2→import glob
     3→import os
     4→import pickle
     5→import random
     6→import tempfile
     7→import time
     8→import zlib
     9→
    10→from django.core.cache.backends.base import DEFAULT_TIMEOUT, BaseCache
    11→from django.core.files import locks
    12→from django.core.files.move import file_move_safe
    13→from django.utils.crypto import md5
    14→
    15→
    16→class FileBasedCache(BaseCache):
    17→    cache_suffix = ".djcache"
    18→    pickle_protocol = pickle.HIGHEST_PROTOCOL
    19→
    20→    def __init__(self, dir, params):
    21→        super().__init__(params)
    22→        self._dir = os.path.abspath(dir)
    23→        self._createdir()
    24→
    25→    def add(self, key, value, timeout=DEFAULT_TIMEOUT, version=None):
    26→        if self.has_key(key, version):
    27→            return False
    28→        self.set(key, value, timeout, version)
    29→        return True
    30→
    31→    def get(self, key, default=None, version=None):
    32→        fname = self._key_to_file(key, version)
    33→        try:
    34→            with open(fname, "rb") as f:
    35→                if not self._is_expired(f):
    36→                    return pickle.loads(zlib.decompress(f.read()))
    37→        except FileNotFoundError:
    38→            pass
    39→        return default
    40→
    41→    def _write_content(self, file, timeout, value):
    42→        expiry = self.get_backend_timeout(timeout)
    43→        file.write(pickle.dumps(expiry, self.pickle_protocol))
    44→        file.write(zlib.compress(pickle.dumps(value, self.pickle_protocol)))
    45→
    46→    def set(self, key, value, timeout=DEFAULT_TIMEOUT, version=None):
    47→        self._createdir()  # Cache dir can be deleted at any time.
    48→        fname = self._key_to_file(key, version)
    49→        self._cull()  # make some room if necessary
    50→        fd, tmp_path = tempfile.mkstemp(dir=self._dir)
    51→
[... truncated ...]
[RAW line 47 TOOL Edit]
{
  "file_path": "./swebench_9_15/testbed/django/core/cache/backends/filebased.py",
  "new_text_sha256": "c51501c051022798d107f9779c8f5fb2ab0e4e83886be54d68fcdd84038d127c",
  "old_text_sha256": "5972002855d8241b61c513472fb3589ba8f5d82c52cb9b55a59ff340b5946908"
}
[RAW line 55 TOOL Write]
{
  "content_sha256": "9ecb0a2355a70caca3008da27b31e977dfa1dbeb566618afef8c2d8c2dceaf53",
  "file_path": "./swebench_9_15/test_race_condition.py"
}
[RAW line 59 TOOL Bash]
python test_race_condition.py
[RAW line 60 TOOL RESULT toolu_01BFyuobSKrcfZBrS7R7AzUA]
Exit code 1
  File "test_race_condition.py", line 56
    print(f"FAIL: FileNotFoundError was raised {len(errors)} times")
                                                                  ^
SyntaxError: invalid syntax
[RAW line 62 TOOL Bash]
python --version
[RAW line 63 TOOL RESULT toolu_01VLk3eAsU8wtzi7R7zR7rTo]
Python 2.7.3
[RAW line 65 TOOL Bash]
python3 test_race_condition.py
[RAW line 66 TOOL RESULT toolu_01ULRAUForqfrMfwVXGoDadi]
Testing FileBasedCache.has_key race condition fix

Test 1: Multiple threads checking expired key
--------------------------------------------------
PASS: No FileNotFoundError raised. has_key was called 10 times.

Test 2: File deleted between exists() and open()
--------------------------------------------------
PASS: has_key returned False without raising FileNotFoundError


✓ All tests passed!
Error processing line 1 of /opt/anaconda3/lib/python3.8/site-packages/matplotlib-nspkg.pth:

  Traceback (most recent call last):
    File "/opt/anaconda3/lib/python3.8/site.py", line 169, in addpackage
      exec(line)
    File "<string>", line 1, in <module>
    File "<frozen importlib._bootstrap>", line 553, in module_from_spec
  AttributeError: 'NoneType' object has no attribute 'loader'

Remainder of file ignored
[RAW line 69 TOOL Bash]
cd testbed && python3 tests/runtests.py cache.tests --verbosity=2 2>&1 | head -100
[RAW line 70 TOOL RESULT toolu_01NpDtirGdWQABLYBYMEZjEn]
Error processing line 1 of /opt/anaconda3/lib/python3.8/site-packages/matplotlib-nspkg.pth:

  Traceback (most recent call last):
    File "/opt/anaconda3/lib/python3.8/site.py", line 169, in addpackage
      exec(line)
    File "<string>", line 1, in <module>
    File "<frozen importlib._bootstrap>", line 553, in module_from_spec
  AttributeError: 'NoneType' object has no attribute 'loader'

Remainder of file ignored
Traceback (most recent call last):
  File "tests/runtests.py", line 28, in <module>
    from django.test.runner import get_max_test_processes, parallel_type
  File "./swebench_9_15/testbed/django/test/runner.py", line 20, in <module>
    import sqlparse
ModuleNotFoundError: No module named 'sqlparse'
[RAW line 75 TOOL Bash]
cd testbed && python3 tests/runtests.py cache.tests.test_file_based -v 2 2>&1 | tail -50
[RAW line 78 TOOL Bash]
python3 tests/runtests.py cache.tests.test_file_based -v 2 2>&1 | tail -50
[RAW line 79 TOOL RESULT toolu_01FLUoNqoaCC57HjmaBLK9GH]
Testing against Django installed in './swebench_9_15/testbed/django' with up to 8 processes
Error processing line 1 of /opt/anaconda3/lib/python3.8/site-packages/matplotlib-nspkg.pth:

  Traceback (most recent call last):
    File "/opt/anaconda3/lib/python3.8/site.py", line 169, in addpackage
      exec(line)
    File "<string>", line 1, in <module>
    File "<frozen importlib._bootstrap>", line 553, in module_from_spec
  AttributeError: 'NoneType' object has no attribute 'loader'

Remainder of file ignored
Importing application cache
Found 1 test(s).
Skipping setup of unused database(s): default, other.
System check identified no issues (0 silenced).
test_file_based (unittest.loader._FailedTest) ... ERROR

======================================================================
ERROR: test_file_based (unittest.loader._FailedTest)
----------------------------------------------------------------------
AttributeError: module 'cache.tests' has no attribute 'test_file_based'

----------------------------------------------------------------------
Ran 1 test in 0.000s

FAILED (errors=1)
[RAW line 81 TOOL Bash]
python3 testbed/tests/runtests.py cache.tests -v 2 2>&1 | tail -100
[RAW line 82 TOOL RESULT toolu_01Bfn35zHUtNdGZChXhReuw9]
python3: can't open file 'testbed/tests/runtests.py': [Errno 2] No such file or directory
Error processing line 1 of /opt/anaconda3/lib/python3.8/site-packages/matplotlib-nspkg.pth:

  Traceback (most recent call last):
    File "/opt/anaconda3/lib/python3.8/site.py", line 169, in addpackage
      exec(line)
    File "<string>", line 1, in <module>
    File "<frozen importlib._bootstrap>", line 553, in module_from_spec
  AttributeError: 'NoneType' object has no attribute 'loader'

Remainder of file ignored
[RAW line 90 TOOL Bash]
python3 tests/runtests.py cache -v 2 2>&1 | grep -A 5 "Ran.*test"
[RAW line 91 TOOL RESULT toolu_01CW3eqg3U9Jfqn72wycuJw6]
Ran 595 tests in 14.247s

OK (skipped=183)
Destroying test database for alias 'default' ('default_1.sqlite3')...
Destroying test database for alias 'default' ('default_2.sqlite3')...
Destroying test database for alias 'default' ('default_3.sqlite3')...
